# SeamCarvingExercise

./: .gitignore  CMakeLists.txt  CustomImageFilter.cpp  CustomImageFilter.h  ImageData.h  README.md  SobelShader.cpp  SobelShader.h  main.cpp  test_CustomImageFilter.cpp  vcpkg.json
cmake/: vcpkg.cmake
